Adding symplectic integration chapter

--- a/proposal.tex
+++ b/proposal.tex
@@ -76,6 +76,8 @@ An excellent introductory textbook on bond graph modeling is \cite{Borutzky2010}
 
 \cite{Birkett1989,Birkett1989a,Birkett1990,Birkett1990a,Birkett2002,Birkett2002a} establish a thorough theoretical justification of the bond graph methodology, especially in the topological and combinitoric sense; \cite{Lamb1997b,Lamb1997,Lamb1997a} establish similiar results but with more focus on physical systems. These two series of papers form the basis of the implementation to be used in Sage.
 \section{Control in bond graphs}
+\section{Symplectic integration}
+
 
 \bibliographystyle{ieeetr}
 \bibliography{bibliography}
