Adding to literature review

--- a/proposal.tex
+++ b/proposal.tex
@@ -80,7 +80,9 @@ An excellent introductory textbook on bond graph modeling is \cite{Borutzky2010}
 \cite{Birkett1989,Birkett1989a,Birkett1990,Birkett1990a,Birkett2002,Birkett2002a} establish a thorough theoretical justification of the bond graph methodology, especially in the topological and combinitoric sense; \cite{Lamb1997b,Lamb1997,Lamb1997a} establish similiar results but with more focus on physical systems. These two series of papers form the basis of the implementation to be used in Sage.
 \section{Control in bond graphs}
 \section{Symplectic integration}
+An excellent compendium by Hairer, Lubich and Wanner, \cite{Hairer} is a textbook on constructing integrators which conserve geometrical properties of differential equations. Specifically, the creation of symplectic and contact integrators is covered in detail, with various strategies to acheive integrators arbitrary orders. \cite{Holmes2009} is a thorough introduction to applied mathematics, such as numerics.
 \section{Graph theory}
+\cite{Knauer2011} is an introductory textbook on algebraic graph theory. It focuses on the description of graphs from a matrix viewpoint, and as such is appropriate for systems which manipulate graphs based on linear algebra packages.
 \section{Geometric dynamics}
 \section{Scientific programming}
 
