Stuff and things .-.

--- a/proposal.tex
+++ b/proposal.tex
@@ -3,6 +3,8 @@
 \author{Sophie Taylor, n6362057}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{hyperref}
+\usepackage[square,comma,numbers]{natbib}
 \begin{document}
 \maketitle
 \tableofcontents
@@ -86,7 +88,7 @@ An excellent compendium by Hairer, Lubich and Wanner, \cite{Hairer} is a textboo
 \section{Geometric dynamics}
 \section{Scientific programming}
 
-\bibliographystyle{ieeetr}
+\bibliographystyle{unsrtnat}
 \bibliography{bibliography}
 \nocite{*}
 \end{document}
