Updates and stuff

--- a/proposal.tex
+++ b/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass[utf,a4paper,12pt]{report}
+\documentclass[utf8,a4paper,12pt]{report}
 \title{Application of bond graph modeling in the aerospace domain: Hohmann transfer orbits}
 \author{Sophie Taylor, n6362057}
 \usepackage{amsmath}
@@ -12,57 +12,57 @@
 \chapter{The case for bond graph modeling}
 Bond graphs provide a complimentary and alternative view of a system graph. By system graph, it is meant, for example, the schematic for an electrical circuit, or equivalent depictions in terms of graphs where the generalised Kirchhoff's effort law applies to graph nodes, and the generalised Kirchhoff's flow law applies to graph cycles.
 
- Instead of this, a bond graph displays a \emph{power port} view of a system; Kirchhoff's effort law applies at a 0 or p-type junction, and Kirchhoff's flow law applies to a 1 or s-type junction. It has been shown that they are basicaly equivalent representations of the same topological system; they are merely different pictorial representations. One is neither better or worse than the other; their strengths and weaknesses are merely the cause of the pictorial depiction used, not the underlying combinitoric system object.
+ Instead of this, a bond graph displays a \emph{power port} view of a system; Kirchhoff's effort law applies at a 0 or p-type junction, and Kirchhoff's flow law applies to a 1 or s-type junction. It has been shown that they are basically equivalent representations of the same topological system; they are merely different pictorial representations. One is neither better or worse than the other; their strengths and weaknesses are merely the cause of the pictorial depiction used, not the underlying combinatoric system object.
 
 Bond graphs, as opposed to system graphs, are focused on energy flow. Because of this, they appear to be naturally suited to aerospace systems, where management of energy is vital to keeping the systems operating within safe limits. For example, if a spacecraft is re-entering the atmosphere at too high a speed, it will either burn up or bounce off the atmosphere, depending on the angle of entry. If it is too slow, it can fail to reach safe landing areas.
 \section{Fundamental ideas and mathematical tools}
-Several important mathematical tools shall be taken advantage of. These tools and techniques, which should be pretty much always used, seem to be neglected, or at least, not used as often as they should.
+This investigation will take advantage of several important mathematical tools. These tools and techniques, which should be pretty much always used, seem to be neglected, or at least, not used as often as they should.
 
 Some of them are rather abstract, such as matriod and Galois theory, and aren't covered in standard engineering courses. This is unfortunate, as many engineering tasks could be greatly simplified if these techniques are used.
 \subsection{All physical variables are tensors}
-Nature has no preferred coordinate system. Thus, every physical quantity is necessarily tensorial in nature. Tensors provide an elegant, coordinate-free modeling style, which can be exploited when it comes time to numerically evaluate them as a desirable coordinate system can be chosen independantly of the modeling phase. Due to the enormous number of frames and associated coordinate systems that are inherent in aerospace systems, the usage of tensors provide a much-needed reduction in complexity.
+Nature has no preferred coordinate system. Thus, every physical quantity is necessarily tensorial in nature. Tensors provide an elegant, coordinate-free modeling style, which can be exploited when it comes time to numerically evaluate them as a desirable coordinate system can be chosen independently of the modeling phase. Due to the enormous number of frames and associated coordinate systems inherent in aerospace systems, the usage of tensors provide a much-needed reduction in complexity.
 \subsection{Configuration space is a symplectic manifold and a Dirac structure}
 Put simply, a Dirac structure is a symplectic manifold such that its dimensions are an integer multiple of a pair of flow and effort dimensions. The configuration of a bond graph is represented by a Dirac structure. This information should be exploited; numeric integrators should use this fact to improve their accuracy. 
 \subsection{Power is what drives a physical system}
-As it is the flow of energy over time, and it takes energy to change physical variables, it is of central importance to keep track of. The bonds in bond graphs represent power exchange. This is in contrast to to linear graphs, which depict points of effort.
-\subsection{Topology of a physical system is a combinitoric object}
+As power is the flow of energy over time, and it takes energy to change physical variables, it is of central importance to keep track of. The bonds in bond graphs represent power exchange. This is in contrast to to linear graphs, which depict points of effort.
+\subsection{Topology of a physical system is a combinatoric object}
 Bond graphs and linear graphs represent the same object; both are fundamentally isomorphic except for trivial graphical representation issues. Bond graphs, however, provide a better representation of power flow between components, whereas system graphs are better at showing nodes of equal effort.
 \subsection{Dissipative port-Hamiltonian systems with junction structure}
 Physical systems are inherently port-Hamiltonian\footnote{This is true even at a quantum level.}. Energy is either transferred via a junction to another port-Hamiltonian system, or is irreversibly dissipated into the environment as entropy. Thus it is natural to use a method which can easily create a port-Hamiltonian formulation.
 \subsection{Object-oriented modeling}
 Bond graphs are excellent for their object-oriented capabilities; every cut-set creates an object, with the interface being the cut edges. This provides a trivial method for creating object libraries, which is key to managing complexity in large projects.
 
-Linear graphs are capable of abstraction in exactly the same manner too; howver, apart from objects such as electrical antennas, they provide little opportunity to represent objects via trees.
+Linear graphs are capable of abstraction in exactly the same manner too; however, apart from objects such as electrical antennas, they provide little opportunity to represent objects via trees.
 \chapter{Planned areas and ideas to explore}
-There appears to be very little published application of bond graphs to aerospace systems. Furthermore, there is little support in current mainstream engineering software for bond graphs. Thus, it is proposed to create a basic bond graph library, and use it to create a proof-of-concept example. This example will be the simulation of a satellite undertaking a Hohmann transfer orbit from low Earth orbit, to geostationary orbit. This requires the creation of several deliverables, followed by verification of correctness, simulation of the created models, and finally, an a posteriori discussion of the suitability of using bond graph techniques.
+There appears to be very little published application of bond graphs to aerospace systems. Furthermore, there is little support in current mainstream engineering software for bond graphs. Thus, it is proposed to create a basic bond graph library, and use it to create a proof-of-concept example. This example will be the simulation of a satellite undertaking a Hohmann transfer orbit from low Earth orbit to geostationary orbit. This requires the creation of several deliverables, followed by verification of correctness, simulation of the created models, and finally, an a posteriori discussion of the suitability of using bond graph techniques.
 
 Since orbital mechanics is all about management of energy, and bond graphs are a representation focused on energy flow, they should be a natural fit.
 \section{Development of a bond graph library in Sage}
 The first deliverable will be a bond graph library for Sage. By this, it is meant a library for creating, representing, manipulation, and simulation of bond graphs.
-Sage is an open-source mathematics environment based on Python, GAP, PARI, Octave, and numerous other open-source mathematics software. It is still in active development, and is sorely lacking in engineering features, such as no control theory library. It is, however, rather highly developed in terms of graph theory, combinitorics, and symbolic algebra; thus it represents a good opportunity to both develop a new area, and contribute to a widely used, open-source system.
+Sage is an open-source mathematics environment based on Python, GAP, PARI, Octave, and numerous other open-source mathematics software. It is still in active development, and as such is sorely lacking in engineering features:eg., a control theory library. It is, however, rather highly developed in terms of graph theory, combinatorics, and symbolic algebra; thus it represents a good opportunity to both develop a new area, and contribute to a widely used, open-source system.
 \subsection{Base bond graph representation}
-Simple graph seperated into interior and exterior vertices, and interior and exterior edges. Interior verticies are transformers or gyrators, and interior edges are part of the underlying junction structure. Exterior vertices are components such as resistors or capacitances, and exterior edges are connection ports to the same domain. While computing various matrices, such as the resistance distance matrix, components on external verticies can be transformed into weights on external edges.
+The underlying representation will be a simple graph separated into interior and exterior vertices, and interior and exterior edges. Interior vertices are transformers or gyrators, and interior edges are part of the underlying junction structure. Exterior vertices are components such as resistors or capacitances, and exterior edges are connection ports to the same domain. While computing various matrices, such as the resistance distance matrix, components on external vertices can be transformed into weights on external edges.
 \subsection{Transformation to underlying matroid}
-A matriod perfectly captures the underlying structure of the physical system; much of the work involved with system modeling is combinitoric in nature, such as interconnection topology. By keeping track of which edges are connected to which components, the underlying topology can be simplified and modified using matroid theory. Sage has support for both matroid and Galois theory, which is used to understand the field $\mathbb{GF}(2)$, a natural representation of the edges in a graph.
+A matriod perfectly captures the underlying structure of the physical system; much of the work involved with system modeling is combinatoric in nature, such as interconnection topology. By keeping track of which edges are connected to which components, the underlying topology can be simplified and modified using matroid theory. Sage has support for both matroid and Galois theory, which is used to understand the field $\mathbb{GF}(2)$, a natural representation of the edges in a graph.
 \subsection{Causality assignment}
-Causality assignment is a vital step in the extraction of system equations.  It is not entirely necessary, however, if an \emph{equational} statement is used, such as in Modelica, as opposed to \emph{assignment} statement such as in C/C++. It has been shown that the process of assigning causality is equivalent to creating a psuedo-colouring of the underlying matroid representing the system. This process is much easier than the standard methods of causality assignment, which can cause difficulties for bond graphs which are not trees.
+Causality assignment is a vital step in the extraction of system equations.  It is not entirely necessary, however, if an \emph{equational} statement is used, such as in Modelica, as opposed to \emph{assignment} statement such as in C/C++. It has been shown that the process of assigning causality is equivalent to creating a pseudo-colouring of the underlying matroid representing the system. This process is much easier than the standard methods of causality assignment, which can cause difficulties for bond graphs which are not trees.
 \subsection{Extraction of system equations}
 A system of equations can provide much insight into the system, and allows further study such as perturbation analysis. In the most general case, this yields a set of differential-algebraic equations; these can be either PDAEs or ODAEs, depending on what is being modeled. For example, position can be represented (in a classical mechanics sense) as a ODAE, whereas the flexing of a beam can be represented as a PDAE. Extraction of these equations is fairly straight-forward, but simplification can be tricky, depending on the complexity of the system.
 
 These equations could then be evaluated numerically either within Sage, or passed into a Modelica environment.\footnote{A third option would be to integrate a Modelica solver into Sage; however, that is too ambitious a task to be included and not in the scope of this project.}
 \subsection{Development of a new element to represent frames}
-Current methods of representing reference frames in bond graphs usually involve using transformer (TF) elements. They become messier to represent once you consider non-inertial reference frames. Thus, development of a new element to repressent a transformation from one frame to another should be undertaken.
+Current methods of representing reference frames in bond graphs usually involve using transformer (TF) elements. They become messier to represent once you consider non-inertial reference frames. Thus, development of a new element to represent a transformation from one frame to another should be undertaken.
 
-\subsection{Examine the possibilty of real-time integration}
+\subsection{Examine the possibility of real-time integration}
 The possibility of real-time integration would provide much usefulness in human-in-the-loop and hardware-in-the-loop simulation in the Sage environment. Currently, it is unlikely to support such a process out of the box, so it will likely have to be developed alongside the development of a symplectic integrator.
 
 \section{Development of a symplectic numerical integrator}
 Conservation of energy in simulations is important, especially in long-running, large step-size integration schemes. Unfortunately, this is rarely the case; for example, the extremely popular RK4 integration scheme is non-symplectic: it doesn't preserve energy. As such, it is of vital importance that a symplectic integrator be developed in order to conserve energy in a bond graph.
 
-This deliverable will also be integrated into Sage. As Sage has plenty of support for differential equations, it should be a fairly simple matter to acheive. An alternative would be to develop one for a Modelica solver; however, this presents greater challenges due to the nature of the individual Modelica environments.
+This deliverable will also be integrated into Sage. As Sage has plenty of support for differential equations, it should be a fairly simple matter to achieve. An alternative would be to develop one for a Modelica solver; however, this presents greater challenges due to the nature of the individual Modelica environments.
 
 \section{Development of a model of a two-body system}
-Creation of a two-body system, with gravitational attraction. Base it on numerous free-body mechanical examples. This may provide the opportunity to introduce a new element; a combined inertia and effort source, to model the gravitational attraction intrinsic to mass. \footnote{Of course, in general relativity, energy density contributes to gravitational attraction too, so energy storage elements also be augmented with an effort source. This may be an interesting topic to be persued in further research; however, it will not be explored in this project.} 
+Creation of a two-body system, with gravitational attraction. Base it on numerous free-body mechanical examples. This may provide the opportunity to introduce a new element; a combined inertia and effort source, to model the gravitational attraction intrinsic to mass. \footnote{Of course, in general relativity, energy density contributes to gravitational attraction too, so energy storage elements also be augmented with an effort source. This may be an interesting topic to be pursued in further research; however, it will not be explored in this project.} 
 
 \section{Creation of a simple satellite model}
 As two-body systems are usually modeled with point masses, they must be converted to full six degree-of-freedom simulations in order to model vehicles. Due to the directional nature of rocket engines, the satellite model must take into account attitude. This can be done quite simply with tensor-based bond graphs. The Sage bond graph library will be used to store and manipulate the model.
@@ -79,10 +79,10 @@ The necessary $\Delta V$ for executing a Hohmann transfer can be determined from
 \section{Introductory books and surveys of bond graphs and associated mathematics}
 An excellent introductory textbook on bond graph modeling is \cite{Borutzky2010}. It is a coherent collection of a vast amount of results from the scattered papers on bond graph methodology, and written in a very friendly style.
 
-\cite{Birkett1989,Birkett1989a,Birkett1990,Birkett1990a,Birkett2002,Birkett2002a} establish a thorough theoretical justification of the bond graph methodology, especially in the topological and combinitoric sense; \cite{Lamb1997b,Lamb1997,Lamb1997a} establish similiar results but with more focus on physical systems. These two series of papers form the basis of the implementation to be used in Sage.
+\cite{Birkett1989,Birkett1989a,Birkett1990,Birkett1990a,Birkett2002,Birkett2002a} establish a thorough theoretical justification of the bond graph methodology, especially in the topological and combinatoric sense; \cite{Lamb1997b,Lamb1997,Lamb1997a} establish similar results but with more focus on physical systems. These two series of papers form the basis of the implementation to be used in Sage.
 \section{Control in bond graphs}
 \section{Symplectic integration}
-An excellent compendium by Hairer, Lubich and Wanner, \cite{Hairer} is a textbook on constructing integrators which conserve geometrical properties of differential equations. Specifically, the creation of symplectic and contact integrators is covered in detail, with various strategies to acheive integrators arbitrary orders. \cite{Holmes2009} is a thorough introduction to applied mathematics, such as numerics.
+An excellent compendium by Hairer, Lubich and Wanner, \cite{Hairer} is a textbook on constructing integrators which conserve geometrical properties of differential equations. Specifically, the creation of symplectic and contact integrators is covered in detail, with various strategies to achieve integrators arbitrary orders. \cite{Holmes2009} is a thorough introduction to applied mathematics, such as numerics.
 \section{Graph theory}
 \cite{Knauer2011} is an introductory textbook on algebraic graph theory. It focuses on the description of graphs from a matrix viewpoint, and as such is appropriate for systems which manipulate graphs based on linear algebra packages.
 \section{Geometric dynamics}
